[package]
name = "orbit_playground"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
cgmath = { version = "0.18.0", features = ["serde"] }
eframe = { version = "0.31.1", features = ["persistence", "ron", "serde", "wgpu"] }
egui-file-dialog = "0.10.0"
encase = { version = "0.11.1", features = ["cgmath"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slotmap = { version = "1.0.7", features = ["serde"] }
